--- a/week2/velog/velogStyle.css
+++ b/week2/velog/velogStyle.css
@@ -71,7 +71,6 @@ nav{
     gap:0.5rem;
     margin-right: 0.7rem;
     font-size: 1.5rem;
-    padding-bottom: 1rem;
     font-weight: 500;
     border-bottom: 2.5px solid black;
 }
@@ -83,7 +82,6 @@ nav{
     gap:0.5rem;
     margin-right:0.7rem;
     align-items: center;
-    padding-bottom: 1rem;
     font-size: 1.5rem;
     font-weight: 500;
     color: gray;
@@ -100,6 +98,74 @@ nav{
     font-weight: 500;
     color: gray;
 }
+
+.nav__select-thisweek{
+    width: 100px; 
+    padding: .8em .5em; 
+    border: none;
+    font-family: inherit; 
+    border-radius: 5px;
+
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 0px;
+}
+
+.select {
+    display: inline-block;
+    width: 100px;
+    /* border: 1px solid #999; */
+    background-color: white;
+    border-radius: 5px;
+  }
+  
+  .select .selected {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px 10px 15px;
+    /* margin-bottom: 20px; */
+  }
+  
+  .select .selected .selected-value {
+    max-width: 90px;
+  }
+  
+  .select .selected .arrow {
+    width: 24px;
+    background: url("https://uxwing.com/wp-content/themes/uxwing/download/02-arrow-direction/arrow-bottom.png") no-repeat 70% 50%;
+    background-size: 50% 50%;
+  }
+  
+  .select ul {
+    display: none;
+  }
+  
+  .select.active ul {
+    display: initial;
+  }
+  .select ul {
+    width: 120px;
+    /* border: 1px solid #999; */
+    position: absolute;
+    background: #fff;
+    border-top: none;
+    margin: 1px 0 0 -1px;
+    cursor: pointer;
+    border-radius: 10px;
+
+  }
+  
+  .select ul li{
+    padding: 8px 5px;
+    border-top: 1px solid rgb(217, 216, 216);
+    padding: 10px 10px 10px 15px;
+  }
+
+  .select ul li:hover {
+    color: rgb(85, 189, 151);
+  }
 
 main{
     display: flex;
