--- a/week2/velog/velogStyle.css
+++ b/week2/velog/velogStyle.css
@@ -2,6 +2,14 @@ body{
     background-color: rgb(246, 246, 246);
 }
 
+/* .modal-open-body{
+    background-color: rgb(41, 41, 41);
+    opacity: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
 header{
     display: flex;
     justify-content: space-between;
@@ -187,7 +195,6 @@ main{
     border: none;
     cursor: pointer;
     transition:all 400ms;
-    /* margin: 1rem 1rem 1rem 1rem; */
 }
 
 .post-card:hover{
@@ -253,6 +260,47 @@ main{
 .post-card-footer__group__heart{
     padding-right: 1rem;
     color: rgb(55, 55, 55);
+}
+
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgb(41, 41, 41,0.6);
+   display: flex;
+   flex-flow: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.close-modal{
+    width: 0;
+    height: 0;
+    display: none;
+}
+
+.post-card__modal-open{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 420px;
+    background-color: rgb(255, 255, 255);
+    justify-content: space-between;
+    /* box-shadow: 0px 7px 7px 7px rgba(219, 219, 219, 0.25); */
+    border: none;
+    cursor: pointer;
+    transition:all 400ms;
+    margin-bottom: 20px;
+}
+
+.modal__btn-delete{
+    color: white;
+    background: none;
+    outline: none;
+    border: none;
+    font-size: large;
 }
 
 @media all and (min-width: 321px) and (max-width: 768px) {
